bug-fix-1044 search css alignment

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -108,10 +108,6 @@
   background: var(--profile-container);
   box-shadow: none;
 }
-.search-Contributor{
-  margin-top:   2px !important;
-  border-radius: 10px !important;
-}
 
 .searched_user_container {
   position: absolute;
