--- a/src/pages/FooterPages/ContributorPage/index.css
+++ b/src/pages/FooterPages/ContributorPage/index.css
@@ -59,7 +59,7 @@
   margin: auto;
   margin-bottom: 3em;
   height: 40px;
-  width: 250px;
+  width: 230px;
   border-radius: 2px;
   display: flex;
   align-items: center;
